df-derive/tests/fail/146-fail-direct-self-recursive-field.stderr
error: field `child` recursively references `Node` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
 --> tests/fail/146-fail-direct-self-recursive-field.rs:8:23
  |
8 |     child: Option<Box<Node>>,
  |                       ^^^^

error: field `child` recursively references `SelfNamed` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:14:23
   |
14 |     child: Option<Box<Self>>,
   |                       ^^^^

error: field `nested` recursively references `TupleField` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:19:30
   |
19 |     nested: (u64, Option<Box<TupleField>>),
   |                              ^^^^^^^^^^

error: field `field_1` recursively references `TupleStruct` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:23:36
   |
23 | struct TupleStruct(u64, Option<Box<TupleStruct>>);
   |                                    ^^^^^^^^^^^
